﻿shmuel 31.08.2019 19:08:04 +0200 - build 702

1. LuaFAR: remove parts from slnunico.c that are not supposed to be used.

shmuel 30.08.2019 23:00:22 +0200 - build 701

1. LuaFAR: make utf8.cfind=utf8.find for backward compatibility.

2. LuaFAR: handle x64 warnings in lutf8lib.c.

shmuel 30.08.2019 15:37:22 +0200 - build 700

1. Remove unicode.utf8.cfind function. It is not needed when utf8.find is available.

shmuel 30.08.2019 14:36:46 +0200 - build 699

1. LuaFAR: add "luautf8" library (https://github.com/starwing/luautf8).
   - The library can be directly accessed via "utf8" global variable.
   - This libary becomes the default when calling string functions with colon syntax, e.g. var:match().
   - A few missing functions are copied to utf8 from unicode.utf8: dump, format, rep, utf8valid.

shmuel 16.08.2019 17:25:50 +0200 - build 698

1. LuaFAR: из реализации функций panel.SetSelection() / panel.ClearSelection() убраны внутренние вызовы
   FCTL_BEGINSELECTION / FCTL_ENDSELECTION; это отдано на усмотрение пользовательских скриптов.
   Причина изменения: Far Manager не поддерживает вложенные вызовы  FCTL_BEGINSELECTION / FCTL_ENDSELECTION.

shmuel 14.08.2019 10:43:37 +0200 - build 697

1. LuaFAR: добавлены функции panel.BeginSelection и panel.EndSelection.

shmuel 03.08.2019 17:55:11 +0200 - build 696

1. Добавлена поддержка контент-колонок в макрофайлах. Для этого нужно определить функцию ContentColumns().

shmuel 28.07.2019 02:03:08 +0200 - build 695

1. LuaFAR: suppress a warning.

shmuel 25.07.2019 21:47:31 +0200 - build 694

1. Added function mf.printconsole().

shmuel 24.07.2019 20:52:16 +0200 - build 693

1. M#3548: LuaFAR: функция юникодного вывода в консоль
   --> added function win.WriteConsole().

shmuel 22.06.2019 21:04:56 +0200 - build 692

1. M#3670: mf.AddExitHandler: возвращаемое значение и дополнительные параметры

shmuel 21.06.2019 22:02:33 +0200 - build 691

1. LuaFAR: minor refactoring.

shmuel 18.04.2019 10:00:19 +0200 - build 690
