@@ -11150,129 +11150,6 @@ mtime=3508317882
 </article>
 </node>
 <node>
-id=250
-lv=1
-dt=Text
-nm=Selene Unicode
-mtime=3602449302
-<article>
-#_<markdown>
-#_There are four string-like ctype closures: **`unicode.ascii`**,
-#_**`latin1`**, **`utf8`** and **`grapheme`**.
-#_
-#_**`ascii`** and **`latin1`** are single-byte like `string`,
-#_but use the unicode table for upper/lower and character classes.
-#_`ascii` does not touch bytes `> 127` on `upper`/`lower`.
-#_
-#_**`ascii`** or **`latin1`** can be used as locale-independent
-#_string replacement. (There is a compile switch to do this
-#_automatically for `ascii`).
-#_
-#_**`utf8`** operates on UTF-8 sequences as of RFC 3629:
-#_1 byte `0-7F`, 2 byte `80-7FF`, 3 byte `800-FFFF`,
-#_4 byte `1000-10FFFF` (not exclusing UTF-16 surrogate characters).
-#_Any byte not part of such a sequence is treated as it's (Latin-1)
-#_value.
-#_
-#_**`grapheme`** takes care of grapheme clusters, which are characters
-#_followed by "grapheme extension" characters (`Mn+Me`) like combining diacritical marks.
-#_
-#_**Calls are:**
-#_
-#_      len(str)
-#_      sub(str, start [,end=-1])
-#_      byte(str, start [,end=-1])
-#_      lower(str)
-#_      upper(str)
-#_      char(i [,j...])
-#_      reverse(str)
-#_
-#_Same as in `string`: `rep`, `format`, `dump`
-#_
-#_TODO: use char count with `%s` in `format`? (`sub` does the job)
-#_
-#_TODO: `grapheme.byte`: only first code of any cluster?
-#_
-#_* `find`, `gfind`, `gsub`: done, but need thorough testing ...:
-#_  `ascii` does not match them on any `%class` (but on `.`,
-#_  literals and ranges).
-#_* Behaviour of `%class` with class not ASCII is undefined.
-#_* Frontier `%f` currently disabled -- should we?
-#_
-#_**Character classes are:**
-#_
-#_      %a L* (Lu+Ll+Lt+Lm+Lo)
-#_      %c Cc
-#_      %d 0-9
-#_      %l Ll
-#_      %n N* (Nd+Nl+No, new)
-#_      %p P* (Pc+Pd+Ps+Pe+Pi+Pf+Po)
-#_      %s Z* (Zs+Zl+Zp) plus the controls 9-13 (HT,LF,VT,FF,CR)
-#_      %u Lu (also Lt ?)
-#_      %w %a+%n+Pc (e.g. '_')
-#_      %x 0-9A-Za-z
-#_      %z the 0 byte
-#_
-#_c.f.<br>
-#_[http://www.unicode.org/reports/tr44/tr44-6.html#Property_Values](http://www.unicode.org/reports/tr44/tr44-6.html#Property_Values)<br>
-#_[http://unicode.org/Public/UNIDATA/UnicodeData.txt](http://unicode.org/Public/UNIDATA/UnicodeData.txt)
-#_
-#_**NOTE:**
-#_
-#_* `find` positions are in bytes for all ctypes!
-#_* use `ascii.sub` to cut found ranges! This is a) faster,
-#_  b) more reliable
-#_
-#_**`utf8`** behaviour:
-#_
-#_* `match` is by codes, code ranges are supported
-#_
-#_**`grapheme`** behaviour:
-#_
-#_* any `%class`, '`.`' and range match includes any following grapheme
-#_  extensions.
-#_* Ranges apply to single code points only.
-#_* If a `[]` enumeration contains a grapheme cluster, this matches
-#_  only the exact same cluster.
-#_* However, a literal single '`o`' standalone or in an `[]`
-#_  enumeration will match just that '`o`', even if it has a
-#_  extension in the string. Consequently, grapheme match positions
-#_  are not always cluster positions.
-#_
-#_
-</article>
-</node>
-<node>
-id=487
-lv=2
-dt=Text
-nm=unicode.utf8.utf8valid
-ctime=3579943896
-mtime=3579944916
-<article>
-#_result, len = unicode.utf8.utf8valid (str)
-#_    or
-#_result, len = str:utf8valid ()
-#_
-#_**Parameters:**
-#_  str:     string
-#_
-#_**Returns:**
-#_  result:  boolean
-#_  len:     integer
-#_
-#_**Description:**
-#_  This function tests whether the entire input string is valid UTF-8.
-#_  If it is, the function returns *true* followed by the string length in characters.
-#_  Otherwise, the function returns *false* followed by the number of valid UTF-8
-#_  characters preceded the first invalid one.
-#_
-#_**Note:**
-#_  This is added function, not present in the original **Selene Unicode** library.
-#_
-</article>
-</node>
-<node>
 id=537
 lv=1
 dt=Text
@@ -11457,6 +11334,77 @@ mtime=3776336176
 #_-------
 #_It use same license with Lua: http://www.lua.org/license.html
 #_
+</article>
+</node>
+<node>
+id=539
+lv=2
+dt=Text
+nm=utf8.dump
+ctime=3776451293
+mtime=3776451825
+<article>
+#_**Note:**
+#_  This is an added function, not present in the original **luautf8** library.
+#_  See *string.dump* for reference.
+#_
+</article>
+</node>
+<node>
+id=541
+lv=2
+dt=Text
+nm=utf8.format
+ctime=3776451312
+mtime=3776451835
+<article>
+#_**Note:**
+#_  This is an added function, not present in the original **luautf8** library.
+#_  See *string.format* for reference.
+#_
+</article>
+</node>
+<node>
+id=540
+lv=2
+dt=Text
+nm=utf8.reverse
+ctime=3776451304
+mtime=3776451843
+<article>
+#_**Note:**
+#_  This is an added function, not present in the original **luautf8** library.
+#_  See *string.reverse* for reference.
+#_
+</article>
+</node>
+<node>
+id=487
+lv=2
+dt=Text
+nm=utf8.utf8valid
+ctime=3579943896
+mtime=3776451338
+<article>
+#_result, len = utf8.utf8valid (str)
+#_    or
+#_result, len = str:utf8valid ()
+#_
+#_**Parameters:**
+#_  str:     string
+#_
+#_**Returns:**
+#_  result:  boolean
+#_  len:     integer
+#_
+#_**Description:**
+#_  This function tests whether the entire input string is valid UTF-8.
+#_  If it is, the function returns *true* followed by the string length in characters.
+#_  Otherwise, the function returns *false* followed by the number of valid UTF-8
+#_  characters preceded the first invalid one.
+#_
+#_**Note:**
+#_  This is an added function, not present in the original **luautf8** library.
 </article>
 </node>
 <node>
@@ -12603,14 +12551,13 @@ id=194
 lv=0
 dt=Text
 nm=Third party software used
-mtime=3520022380
+mtime=3776452169
 <article>
 #_<markdown>
 #_The following third party software is used as part of LuaFAR:
 #_
-#_1. [FAR 3.0 Plugin SDK](195.html)
 #_1. [Lua 5.1](196.html)
-#_1. [Selene Unicode](251.html)
+#_1. [luautf8](538.html)
 #_
 #_Many thanks to the authors for making their great software available!
 #_
@@ -12652,121 +12599,6 @@ nm=Lua 5.1
 #_OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 #_THE SOFTWARE.
 #_
-#_
-</article>
-</node>
-<node>
-id=251
-lv=1
-dt=Text
-nm=Selene Unicode
-mtime=3607435737
-<article>
-#_<markdown>
-#_    /*
-#_      Porting to Lua 5.2 and bug fixes: (C) Shmuel Zeigerman, 2010-2014.
-#_      MIT license.
-#_    */
-#_
-#_    /*
-#_    *	Selene Unicode/UTF-8
-#_    *	This additions
-#_    *	Copyright (c) 2005 Malete Partner, Berlin, partner@malete.org
-#_    *	Available under "Lua 5.0 license", see http://www.lua.org/license.html#5
-#_    *	$Id: slnunico.c,v 1.5 2006/07/26 17:20:04 paul Exp $
-#_    *
-#_    *	contains code from
-#_    ** lstrlib.c,v 1.109 2004/12/01 15:46:06 roberto Exp
-#_    ** Standard library for string operations and pattern-matching
-#_    ** See Copyright Notice in lua.h
-#_    *
-#_    *	uses the udata table and a couple of expressions from Tcl 8.4.x UTF-8
-#_    * which comes with the following license.terms:
-#_
-#_    This software is copyrighted by the Regents of the University of
-#_    California, Sun Microsystems, Inc., Scriptics Corporation, ActiveState
-#_    Corporation and other parties.  The following terms apply to all files
-#_    associated with the software unless explicitly disclaimed in
-#_    individual files.
-#_
-#_    The authors hereby grant permission to use, copy, modify, distribute,
-#_    and license this software and its documentation for any purpose, provided
-#_    that existing copyright notices are retained in all copies and that this
-#_    notice is included verbatim in any distributions. No written agreement,
-#_    license, or royalty fee is required for any of the authorized uses.
-#_    Modifications to this software may be copyrighted by their authors
-#_    and need not follow the licensing terms described here, provided that
-#_    the new terms are clearly indicated on the first page of each file where
-#_    they apply.
-#_
-#_    IN NO EVENT SHALL THE AUTHORS OR DISTRIBUTORS BE LIABLE TO ANY PARTY
-#_    FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES
-#_    ARISING OUT OF THE USE OF THIS SOFTWARE, ITS DOCUMENTATION, OR ANY
-#_    DERIVATIVES THEREOF, EVEN IF THE AUTHORS HAVE BEEN ADVISED OF THE
-#_    POSSIBILITY OF SUCH DAMAGE.
-#_
-#_    THE AUTHORS AND DISTRIBUTORS SPECIFICALLY DISCLAIM ANY WARRANTIES,
-#_    INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY,
-#_    FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.  THIS SOFTWARE
-#_    IS PROVIDED ON AN "AS IS" BASIS, AND THE AUTHORS AND DISTRIBUTORS HAVE
-#_    NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR
-#_    MODIFICATIONS.
-#_
-#_    GOVERNMENT USE: If you are acquiring this software on behalf of the
-#_    U.S. government, the Government shall have only "Restricted Rights"
-#_    in the software and related documentation as defined in the Federal
-#_    Acquisition Regulations (FARs) in Clause 52.227.19 (c) (2).  If you
-#_    are acquiring the software on behalf of the Department of Defense, the
-#_    software shall be classified as "Commercial Computer Software" and the
-#_    Government shall have only "Restricted Rights" as defined in Clause
-#_    252.227-7013 (c) (1) of DFARs.  Notwithstanding the foregoing, the
-#_    authors grant the U.S. Government and others acting in its behalf
-#_    permission to use and distribute the software in accordance with the
-#_    terms specified in this license.
-#_
-#_    (end of Tcl license terms)
-#_    */
-#_
-#_    /*
-#_    According to http://ietf.org/rfc/rfc3629.txt we support up to 4-byte
-#_    (21 bit) sequences encoding the UTF-16 reachable 0-0x10FFFF.
-#_    Any byte not part of a 2-4 byte sequence in that range decodes to itself.
-#_    Ill formed (non-shortest) "C0 80" will be decoded as two code points C0 and 80,
-#_    not code point 0; see security considerations in the RFC.
-#_    However, UTF-16 surrogates (D800-DFFF) are accepted.
-#_
-#_    See http://www.unicode.org/reports/tr29/#Grapheme_Cluster_Boundaries
-#_    for default grapheme clusters.
-#_    Lazy westerners we are (and lacking the Hangul_Syllable_Type data),
-#_    we care for base char + Grapheme_Extend, but not for Hangul syllable sequences.
-#_
-#_    For http://unicode.org/Public/UNIDATA/UCD.html#Grapheme_Extend
-#_    we use Mn (NON_SPACING_MARK) + Me (ENCLOSING_MARK),
-#_    ignoring the 18 mostly south asian Other_Grapheme_Extend (16 Mc, 2 Cf) from
-#_    http://www.unicode.org/Public/UNIDATA/PropList.txt
-#_    */
-#_
-#_    /* Contains code from:
-#_    Quylthulg Copyright (C) 2009 Kein-Hong Man <keinhong@gmail.com>
-#_
-#_    Permission is hereby granted, free of charge, to any person obtaining a copy
-#_    of this software and associated documentation files (the "Software"), to deal
-#_    in the Software without restriction, including without limitation the rights
-#_    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-#_    copies of the Software, and to permit persons to whom the Software is
-#_    furnished to do so, subject to the following conditions:
-#_
-#_    The above copyright notice and this permission notice shall be included in
-#_    all copies or substantial portions of the Software.
-#_
-#_    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-#_    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-#_    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
-#_    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-#_    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-#_    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-#_    THE SOFTWARE.
-#_    */
 #_
 </article>
 </node>
