@@ -1,4 +1,8 @@
-﻿shmuel 31.08.2019 19:08:04 +0200 - build 702
+﻿shmuel 31.08.2019 22:10:18 +0200 - build 703
+
+1. LuaFAR: refactoring.
+
+shmuel 31.08.2019 19:08:04 +0200 - build 702
 
 1. LuaFAR: remove parts from slnunico.c that are not supposed to be used.
 
